new layout mobile web

--- a/mobile-first-test/index.html
+++ b/mobile-first-test/index.html
@@ -35,12 +35,14 @@
       </div>
 
       <div class="body">
-        <div class="main-title">Подари мечту</div>
-        <div class="sub-title">
-          Самые свежие пионы в Москве с доставкой на дом
-        </div>
-        <div class="catalog">
-          <button class="btn-catalog">В каталог</button>
+        <div class="body-inner">
+          <div class="main-title">Подари мечту</div>
+          <div class="sub-title">
+            Самые свежие пионы в Москве с доставкой на дом
+          </div>
+          <div class="catalog">
+            <button class="btn-catalog">В каталог</button>
+          </div>
         </div>
       </div>
 
